--- a/JoinUs.html
+++ b/JoinUs.html
@@ -50,7 +50,7 @@
                         <input type="text" id="email" name="email"><br><br>
 
                         <label for="password">Password:</label>
-                        <input type="text" id="password" name="password"><br><br>
+                        <input type="password" id="password" name="password"><br><br>
 
                         <label>Gender:</label>
                         <input type="radio" id="male" name="gender" value="Male" checked>
